Closed Bug 1891203 Opened 6 months ago Closed 4 months ago

Selective reply wraps to 72 character line wrap when replying to MS Exchange email

Categories

(Thunderbird :: Message Compose Window, defect)

Thunderbird 115
defect

Tracking

(thunderbird128? fixed)

RESOLVED FIXED
129 Branch
Tracking Status
thunderbird128 ? fixed

People

(Reporter: dskirk, Assigned: darktrojan)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached image versions91thru115.jpg

Steps to reproduce:

I selected an incoming plain text message in inbox, highlighted only a portion of the message so that my response would focus on just the selected paragraph.

Actual results:

In release 91 and 102, the selected quote wrapped to full width of window, but in 115, the selected quote wraps to 72 characters.

Expected results:

The selected quote should have wrapped to window width as 91 and 102 do. Attached image shows results of each. Changing mailnews.wraplength has no effect.

UPDATE: This seems to happen for email sent from Microsoft Office. The problem does not exist for messages sent by Thunderbird.

Further update. I checked with 102.15.1 and that release works properly, wrapping a window size when doing selective quote response. Please get this fixed. This bug began with ver 115. This happens when responding to people who use Microsoft Office. Thank you. I can redirect a sample email if that helps confirm this bug.

Summary: Selective reply wraps to 72 character line wrap → Selective reply wraps to 72 character line wrap when replying to MS Exchange email

Can you attach a sample message (.eml file)? Please remove any personal information before attaching.

Attached file Sample MS Office email

I am uploading a sample email. Highlight the paragraph beginning with "So, my Outlook looks...' and click the reply button to see how it wraps the text. I uploaded complete message to ensure you see it.

I can reproduce the behaviour. In 102 the reply contains:

    <blockquote type="cite" cite="mid:BYAPR19MB226339A764116B97B03BAD52A9E32@BYAPR19MB2263.namprd19.prod.outlook.com">
      <pre class="moz-quote-pre" wrap="">So, my Outlook looks like this (screen shot attached).  Whatever you are using won't let me put the screenshot jpg into the email. I have to do an attachment.</pre>
    </blockquote>

In 115 it contains:

    <blockquote type="cite" cite="mid:BYAPR19MB226339A764116B97B03BAD52A9E32@BYAPR19MB2263.namprd19.prod.outlook.com">
      <pre>So, my Outlook looks like this (screen shot attached).  Whatever you are
 using won't let me put the screenshot jpg into the email. I have to do 
an attachment.</pre>
    </blockquote>

So the quoted text is hard wrapped which is visible.

Likely a fallout of bug 1818683 or bug 1839226.

For what it's worth, I noticed there is a fix today in Betterbird:
https://github.com/Betterbird/thunderbird-patches/blob/main/115/bugs/1891203-plaintext-reply-format.patch Encouraging. :)

Status: UNCONFIRMED → NEW
Ever confirmed: true
Component: Untriaged → Message Compose Window
Regressed by: 1839226
Regressed by: 1818683
No longer regressed by: 1839226

from Bug 1818683 - Replying with part of original message selected quotes entire message instead of selection only

Flags: needinfo?(geoff)

The selected text should not be wrapped when quoted, i.e. there should not be new-line characters,
but it should visibly wrap at the window width when in the editor.

Assignee: nobody → geoff
Status: NEW → ASSIGNED
Flags: needinfo?(geoff)

Please add attribution since this is what we proposed, see comment #6. As you can see in the patch, there is more cleanup possible, removing the type parameter of GetOrigWindowSelection().

(In reply to betterbird.project+16 from comment #9)

Please add attribution since this is what we proposed, see comment #6. As you can see in the patch, there is more cleanup possible, removing the type parameter of GetOrigWindowSelection().

We haven't looked at your patch but fixed it on our own.
By looking at it right now there's only one possible fix to this issue, so there's no really an "attribution" case here.
Also your patch touches other areas that we don't need and it lacks all the tests that Geoff implemented.

Target Milestone: --- → 129 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/60c604b6e232
Fix text wrap when quoting a selection. r=aleca

Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Blocks: tb128found

Comment on attachment 9406553 [details]
Bug 1891203 - Fix text wrap when quoting a selection. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #): supernova
User impact if declined: quoting weirdly wraps
Testing completed (on c-c, etc.):
Risk to taking this patch (and alternatives if risky):

Attachment #9406553 - Flags: approval-comm-beta?

Comment on attachment 9406553 [details]
Bug 1891203 - Fix text wrap when quoting a selection. r=#thunderbird-reviewers

[Triage Comment]
Approved for beta

Attachment #9406553 - Flags: approval-comm-beta? → approval-comm-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: