Bug 1891203 - Fix text wrap when quoting a selection. r=aleca The selected text should not be wrapped when quoted, i.e. there should not be new-line characters, but it should visibly wrap at the window width when in the editor.

Differential Revision: https://phabricator.services.mozilla.com/D213178

--HG--
extra : rebase_source : 5d50908ff1708d6f89290feae04abd1b560fe704
extra : amend_source : 0c0459067de2eebe597d4da13358d34d81207a9d